media/radarr-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: radarr
    app.kubernetes.io/component: radarr
    app.kubernetes.io/instance: media
    app.kubernetes.io/part-of: radarr
  name: radarr
  namespace: media
spec:
  host: radarr-media.apps.homelab.csfreak.com
  port:
    targetPort: 8989-tcp
  to:
    kind: Service
    name: radarr
    weight: 100
  wildcardPolicy: None
